# cuda_sim

./: .gitignore  ARCHITECTURE.md  CMakeLists.txt  LICENSE  README.md  cuda-sim-build.sh
.github/workflows/: ci.yml
cmake/: CudaSimCompile.cmake  CudaSimConfig.cmake
docker/: Dockerfile  generate_ptx.sh
examples/hello_compile_time/: kernel.cu  kernel.ptx  kernel_cpu.h  main.cpp
examples/hello_runtime/: main.cpp
examples/histogram/: CMakeLists.txt  kernel.cu  kernel.ptx  main.cpp
examples/matrix_mul/: CMakeLists.txt  kernel.cu  kernel.ptx  main.cpp
examples/native_syntax/: CMakeLists.txt  kernel.ptx  main.cpp
examples/reduction/: CMakeLists.txt  kernel.cu  kernel.ptx  main.cpp
examples/relu/: CMakeLists.txt  kernel.cu  kernel.ptx  kernel_cpu.h  main.cpp
examples/saxpy/: CMakeLists.txt  kernel.cu  kernel.ptx  main.cpp
examples/softmax/: CMakeLists.txt  kernel.cu  kernel.ptx  kernel_cpu.h  main.cpp
examples/vector_add/: CMakeLists.txt  kernel.cu  main.cpp
examples/warp_reduce/: CMakeLists.txt  kernel.cu  kernel.ptx  main.cpp
include/compat/: cuda.h  cuda_fp16.h  cuda_runtime.h  cuda_runtime_api.h  device_functions.h  device_launch_parameters.h  nvrtc.h
include/cuda_sim/: barrier.h  cuda_runtime_api.h  device_atomic.h  driver_api.h  runtime.h  warp.h
integration/quai-gpu-miner/: Dockerfile  build.sh
integration/quai-gpu-miner/patches/: CMakeLists.cuda_sim.txt  CUDAMiner_cuda_sim.cpp  SimulateClient.cpp.patch  test_correctness.cpp  test_jit_progpow.cpp  test_verify.cpp
tests/: test_error_detection.cpp  test_ptx_parser.py
tools/: cuda_preprocess.py  ptx2cpp.py
